force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk calculation</label>
    <nameField>
        <label>Risk  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>