force-app/main/default/objects/Risk__c/fields/Field_4__c.field-meta.xml
<CustomField>
    <fullName>Field_4__c</fullName>
    <label>Field 4</label>
    <length>18</length>
    <type>Text</type>
</CustomField>