force-app/main/default/objects/Risk__c/fields/Sum_of_All_Fields__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_All_Fields__c</fullName>
    <formula>VALUE( Field_1__c ) +  VALUE( Field_2__c )+ VALUE( Field_3__c )+ VALUE( Field_4__c )+ VALUE( Field_5__c )+ VALUE( Field_6__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of All Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>